--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.notifications.MainActivity2"></activity>
+        <activity android:name=".ui.weather.Weather_MainActivity2"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
